# test-baremetal-rust

./: .gitignore  Cargo.toml  README.md  flake.nix  qemu-run.nu  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
