[package]
name = "test-baremetal-with-stable-rustc"
version = "0.1.0"
edition = "2024"

[package.metadata.bootimage]
build-command = ["build"]

[dependencies]
bootloader = "0.10.13"

[profile.dev]
panic = "abort"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"
strip = "symbols"
