[package]
name = "test-baremetal-with-stable-rustc"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader_api = "0.11.13"

[build-dependencies]
bootloader = "0.11.13"

[profile.dev]
panic = "abort"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"
strip = "symbols"
